[package]
name = "fio-eta-line"
version = "0.1.0"
edition = "2021"
description = "Interpreting fio's ETA line with nom"
license = "MIT"
authors = ["poly000"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "5.1.4"
nom = "7.1.3"
rust_decimal = "1.34.2"
